--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@studio-freight/lenis": "^1.0.19",
     "aos": "^2.3.2",
     "axios": "^0.27.2",
     "compression-webpack-plugin": "^6.1.1",
